deployment/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
        track: canary
    spec:
      containers:
      - name: simple-server
        image: docker.io/library/simple-python-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "250m"
            memory: "64Mi"
