deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-server
      track: stable
  template:
    metadata:
      labels:
        app: simple-server
        track: stable
    spec:
      containers:
      - name: simple-server
        image: docker.io/library/simple-python-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "128Mi"
