deployment/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-canary
spec:
  type: ClusterIP
  selector:
    app: simple-server
    track: canary
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
