deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-server
spec:
  type: ClusterIP
  selector:
    app: simple-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
