deployment/ingress-canary.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server-canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: simple-server.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-server-canary
                port:
                  number: 8080
