deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: simple-server.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-server
                port:
                  number: 8080
